tests/fixtures/invalid/pow_none_none_str.py
# Cannot call pow() with None, None, Str
x = pow(None, None, "hello")
